--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.11",
+    "@tanstack/react-query": "^4.20.4",
+    "@types/react-table": "^7.7.12",
+    "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "next": "13.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "@types/node": "18.11.17",
