--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.11",
+    "@chakra-ui/react": "^2.4.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^4.20.4",
     "@types/react-table": "^7.7.12",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "framer-motion": "^6",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
